--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
     <title>Ignite Feed</title>
   </head>
-  <body class="antialiased bg-bgApp text-white">
+  <body class="antialiased bg-gray900 text-gray300 font-roboto font-normal text-base">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
