--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
     <title>Ignite Feed</title>
   </head>
-  <body class="antialiased bg-gray900 text-gray300 font-roboto font-normal text-base">
+  <body class="antialiased bg-gray900 text-gray300 font-roboto font-normal lg:text-base">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
